--- a/components/kfp-normalize-dataset/src/Dockerfile
+++ b/components/kfp-normalize-dataset/src/Dockerfile
@@ -2,6 +2,11 @@
 
 FROM python:3.11-slim
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    libmagic1 \
+    && apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 WORKDIR /usr/local/src/kfp/components
 COPY runtime-requirements.txt runtime-requirements.txt
 RUN pip install --no-cache-dir -r runtime-requirements.txt
