--- a/.github/workflows/build-component.yml
+++ b/.github/workflows/build-component.yml
@@ -65,8 +65,9 @@ jobs:
           images: |
             us-central1-docker.pkg.dev/kflow-artifacts/kfp-components/${{ inputs.component-name }}
           tags: |
-            type=ref,event=tag
+            type=match,pattern=kfp-.*/v(\d+.\d+.\d+),group=1
             type=ref,event=branch,prefix=branch/,suffix=-${{ github.run_number }}
+            type=edge,branch=main
 
       - name: Build Component Docker Image
         uses: docker/build-push-action@v4
